// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package sample;

option go_package = "samplepb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/any.proto";

// Do not generate XXX fields to reduce memory footprint.
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

message Sample {
    google.protobuf.Any factory = 1;
    
    BinaryTOC toc = 2;

	Symbols symbols = 3;
	
	map<uint32, string> nameSymbols = 4;

    Mutex valueSymbolsMx = 5;
	ValueSymbols valueSymbols = 6;

	google.protobuf.Any postingsOffsetTable = 7;

	int64 version = 8;
	int64 indexVersion = 9;
}

message BinaryTOC {
    uint64 Symbols = 1;

	uint64 PostingsOffsetTable = 2;
}

message Symbols {
    google.protobuf.Any factory = 1;

	int64 version = 2;
	int64 tableOffset = 3;

    repeated int64 offsets = 4 [packed=true];
	int64 seen = 5;
}

message Mutex {
	int32 state = 1;
	uint32 sema = 2;
}

message ValueSymbols {
    uint32 index = 1;
	string symbol = 2;
}
